config/observability/openshift/kube-state-metrics.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: kube-state-metrics-kuadrant
    app.kubernetes.io/part-of: kuadrant
    app.kubernetes.io/version: 2.5.0
  name: kube-state-metrics-kuadrant
  namespace: monitoring
spec:
  clusterIP: None
  ports:
  - name: https-main
    port: 8081
    targetPort: https-main
  - name: https-self
    port: 8082
    targetPort: https-self
  selector:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: kube-state-metrics-kuadrant
    app.kubernetes.io/part-of: kuadrant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: kube-state-metrics-kuadrant
    app.kubernetes.io/part-of: kuadrant
    app.kubernetes.io/version: 2.5.0
  name: kube-state-metrics-kuadrant
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: kube-state-metrics-kuadrant
      app.kubernetes.io/part-of: kuadrant
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: kube-state-metrics
      labels:
        app.kubernetes.io/component: exporter
        app.kubernetes.io/name: kube-state-metrics-kuadrant
        app.kubernetes.io/part-of: kuadrant
        app.kubernetes.io/version: 2.5.0
    spec:
      volumes:
      - name: custom-resource-state
        configMap:
          defaultMode: 420
          name: custom-resource-state
      automountServiceAccountToken: true
      containers:
      - volumeMounts:
        - name: custom-resource-state
          mountPath: /custom-resource-state
        args:
        - --port=8081
        - --telemetry-port=8082
        - --custom-resource-state-config-file
        - /custom-resource-state/custom-resource-state.yaml
        image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.9.2
        name: kube-state-metrics
        resources:
          limits:
            cpu: 100m
            memory: 250Mi
          requests:
            cpu: 10m
            memory: 190Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        ports:
        - containerPort: 8081
          name: https-main
        - containerPort: 8082
          name: https-self
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: kube-state-metrics-kuadrant
