config/observability/openshift/jaeger-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jaeger
  namespace: observability
spec:
  to:
    kind: Service
    name: jaeger
  port:
    targetPort: http-query
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
